--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Bienvenido a la web del Estudio Fotográfico Fotocol2000</h1>
+    <p>Bienvenidos</p>
     <h2>Esta es la página donde podrás ver nuestros trabajos</h2>
 </body>
 </html>
